<resources>
    <string name="app_name">AgriClime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="kualitas_udara">Humidity</string>
    <string name="plant">Plant</string>
    <string name="scan">Scan</string>
    <string name="history">History</string>
    <string name="detail_history">Detail History</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="location_test">Samarinda</string>
    <string name="back_button_description">back button description</string>
    <string name="this_is_the_news_activity">This is the News Activity</string>
    <string name="image_news">Image News</string>
    <string name="plant_title">Plant Title</string>
    <string name="scientific_name">Scientific Name</string>
    <string name="news_items">news items</string>

    <string name="saran">Tanaman yang Cocok Ditanam Hari</string>
    <string name="infosaran">info saran</string>
    <string name="cuaca">Cuaca</string>
    <string name="ramalan">Dampak</string>
    <string name="infocuaca">Temperatur memengaruhi fotosintesis, pertumbuhan, dan produktivitas tanaman. Suhu ekstrem dapat menyebabkan stres pada tanaman.</string>
    <string name="peringatan">Peringatan</string>
    <string name="infoperingatan">•Pasang windbreaks seperti pagar hidup (tanaman bambu atau pohon) atau jaring pelindung angin.\n• Jarak tanam yang lebih rapat dapat mengurangi efek angin pada tanaman kecil.</string>
    <string name="Kelembaban">Kelembaban</string>
    <string name="info_kelembaban">Panduan:\n
    Gunakan fungisida preventif jika kelembapan tinggi.\n
    Pastikan ventilasi udara baik di sekitar tanaman dengan jarak tanam yang cukup.\n
    Kelembapan rendah (Kurang dari 40%): Irigasi tetes dapat membantu menjaga kelembapan di area akar.</string>
    <string name="tips">Tips</string>
    <string name="cuaca2">Arah Angin dan Kecepatan Angin</string>
    <string name="infocuaca2">Arah Angin : Menentukan penyebaran hama, penyakit, dan efisiensi penyemprotan pestisida.\n  \nKecepatan Angin :Angin kencang dapat merusak tanaman, mengurangi kelembapan tanah, serta mempengaruhi proses penyerbukan dan penyemprotan pestisida.</string>
    <string name="family_common_name">Family Common Name</string>
    <string name="loading">loading</string>
    <string name="test_temp">34°C</string>
    <string name="test_day">Day</string>
    <string name="test_temp_c">34°C</string>
    <string name="test_cloudy">Cloudy</string>
    <string name="perkiraan">28 ~ 35°C Feels like 36°C</string>
    <string name="wind_speed">15km/j</string>
    <string name="arah_angin">251° BBD</string>
    <string name="test_warning">Warning</string>
    <string name="Dummy_text">• Pasang windbreaks seperti pagar hidup (tanaman bambu atau pohon) atau jaring pelindung angin.\n• Jarak tanam yang lebih rapat dapat mengurangi efek angin pada tanaman kecil.</string>
    <string name="perjam_prediksi">Hourly Weather</string>
    <string name="now_test">Now</string>
    <string name="test_jam1">15.00</string>
    <string name="test_jam2">16.00</string>
    <string name="test_jam3">17.00</string>
    <string name="_34_c_test">34°C</string>
    <string name="_32_c_test">32°C</string>
    <string name="_32_ctest">32°C</string>
    <string name="_30_ctest">30°C</string>
    <string name="humidity_test">Humidity</string>
    <string name="_59_test">59%</string>
    <string name="the_current_dew_point_is_30_text">The current dew point is 30°</string>
    <string name="uv_index_test">UV Index</string>
    <string name="_8_high_test">8 High</string>
    <string name="humadity">Kelembapan tinggi (>80%) meningkatkan risiko penyakit jamur seperti embun tepung dan bercak daun.</string>
    <string name="index_uv">Index UV</string>
    <string name="info_uv">Paparan UV tinggi (>8) dapat merusak daun muda, mengurangi efisiensi fotosintesis, dan memengaruhi kesehatan tanaman.\nPanduan : \nGunakan net pelindung UV untuk melindungi tanaman muda atau rentan.\nTanam varietas tahan panas di area terbuka dengan paparan sinar matahari langsung.</string>
</resources>